--- a/nene_mail.html
+++ b/nene_mail.html
@@ -270,12 +270,12 @@
 
             // Image slider code
             const images = [
-                'palmy/1.jpg',
-                'palmy/2.jpg',
-                'palmy/3.jpg',
-                'palmy/4.jpg',
-                'palmy/5.jpg',
-                'palmy/6.jpg'
+                'nene/1.jpg',
+                'nene/2.jpg',
+                'nene/3.jpg',
+                'nene/4.jpg',
+                'nene/5.jpg',
+                'nene/6.jpg'
             ];
             const sliderImage = document.querySelector('.slider-image');
             const leftArrow = document.querySelector('.left-arrow');
