--- a/nene_mail.html
+++ b/nene_mail.html
@@ -219,14 +219,17 @@
             <div class="cover"></div>
             <div class="text">
                 🌺ถึงเนเน่...<br /><br />
-                ในวันเกิดของบี๋ และวันครบรอบของเรา <br />
+                💌ในวันเกิดของบี๋ และวันครบรอบของเรา <br />
                 เค้าอยากขอบคุณฟ้า และโชคชะตา<br />
                 ที่ทำให้เรามาเจอกันและเดินร่วมทางมาจนถึงวันนี้...<br />
                 ไม่ว่าเวลาจะผ่านไปกี่ปี <span class="tilt">Love you💜</span><br>
                 ไม่ว่าเราจะเจอเรื่องดีหรือร้ายแค่ไหน <br />
                 เค้าก็ยังอยากอยู่ตรงนี้ ข้าง ๆ บี๋เหมือนเดิม<br />
                 และขอให้ปีนี้เป็นปีที่บี๋ได้เติมเต็มความฝันของบี๋นะ <br />
-                พร้อมกับความรักจากฉันที่ไม่มีวันลดลงเลย 💫<br />
+                พร้อมกับความรักจากฉันที่ไม่มีวันลดลงเลย 💫<br><br />
+
+                🎁อาจไม่ใช่ของขวัญที่ดีหรือมีราคาสูงสำหรับบี๋<br />
+                แต่เป็นสิ่งนึงที่เค้าพอจะทำให้ได้😥<br />
 
         
 
