--- a/wacoal.html
+++ b/wacoal.html
@@ -94,11 +94,12 @@
         </a>
 
         <a href="https://https://www.canva.com/design/DAG5nGldyEQ/YwlUZM7kgBcx8djYwSsfQw/view?utm_content=DAG5nGldyEQ&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h35f08de90b" target="_blank" class="download-btn" style="background-color:#d81b60;">
-            เปิดโฟลเดอร์ MediaFire
+            Canva English
         </a>
 
         <footer>© 2025 Wacoal Download Portal</footer>
     </div>
 </body>
 </html
+
 
