--- a/wacoal.html
+++ b/wacoal.html
@@ -93,7 +93,7 @@
             เปิดโฟลเดอร์ Google Drive
         </a>
 
-        <a href="https://https://https://www.canva.com/design/DAG5nGldyEQ/YwlUZM7kgBcx8djYwSsfQw/view?utm_content=DAG5nGldyEQ&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h35f08de90b" target="_blank" class="download-btn" style="background-color:#d81b60;">
+        <a href="https://www.canva.com/design/DAG5nGldyEQ/YwlUZM7kgBcx8djYwSsfQw/view?utm_content=DAG5nGldyEQ&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h35f08de90b" target="_blank" class="download-btn" style="background-color:#d81b60;">
             Canva English
         </a>
 
@@ -101,6 +101,7 @@
     </div>
 </body>
 </html
+
 
 
 
