--- a/wacoal.html
+++ b/wacoal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wacoal Downloads</title>
+    <title>Overflow Downloads</title>
     <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8e/Wacoal_logo.svg/512px-Wacoal_logo.svg.png" type="image/png">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap" rel="stylesheet">
@@ -93,14 +93,15 @@
             เปิดโฟลเดอร์ Google Drive
         </a>
 
-        <a href="https://www.canva.com/design/DAG5nGldyEQ/YwlUZM7kgBcx8djYwSsfQw/view?utm_content=DAG5nGldyEQ&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h35f08de90b" target="_blank" class="download-btn" style="background-color:#d81b60;">
-            Canva English
+        <a href="https://drive.google.com/drive/folders/1k6YJP6vvd7iXCdce6GGUXJu14fZ2baES?usp=drive_link" target="_blank" class="download-btn" style="background-color:#d81b60;">
+            T.Eddy วุ่นวายก่อนทาน
         </a>
 
         <footer>© 2025 Wacoal Download Portal</footer>
     </div>
 </body>
 </html
+
 
 
 
